fix routerlink with popup

--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -13,10 +13,10 @@
         Nombre de patients attribués : {{this.quiz.users.length}}<br>
     </div>
     </div>
-    <!-- <div>
+    <div>
         <img style="width: 100px; height: 100px;" src="/assets/folder.png" alt="add-element" (click)="createElement()">
         <h3>Ajouter élément de Quiz</h3>
-    </div> -->
+    </div>
     <div>
         <img style="width: 100px; height: 100px;" src="/assets/edit.png" alt="edit">
         <h3>PolyQuiz Editor</h3>
