--- a/front-end/src/app/associations/association-form/association-form.component.html
+++ b/front-end/src/app/associations/association-form/association-form.component.html
@@ -1,5 +1,5 @@
 <button class="back-button" routerLink="/edit-quiz/{{this.themeId}}/{{this.quizId}}">Retour</button><br>
-<div class="card">
+<div class="card" style="max-width: fit-content;">
   <h2>Créer nouvelle association</h2>
   <form class="quiz-form" [formGroup]="associationForm">
     <label for="label">
