--- a/front-end/src/app/quizzes/quiz-list/quiz-list.component.html
+++ b/front-end/src/app/quizzes/quiz-list/quiz-list.component.html
@@ -12,7 +12,7 @@
 <h1 style="display: flex; justify-content: center;">Choisissez un quiz</h1>
 <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; width:100%;">
     <div *ngFor="let quiz of quizList, let i=index">
-        <div class="quiz">
+        <div *ngIf="quiz.users.length===0 || quiz.users.includes(user.id)" class="quiz">
             <ng-container *ngIf="quiz.users.length===0 || quiz.users.includes(user.id)">
                 <app-quiz [quiz]="quiz" [user]="user" [type]="type" (startQuiz)="startQuiz($event)" (deleteQuiz)="deleteQuiz($event)" (editQuiz)="editQuiz($event)"></app-quiz>
             </ng-container>
