--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
@@ -18,12 +18,7 @@
         <div style="display: flex; align-items: center; justify-content: flex-end; flex-basis: 25%;">
             <div style="display: flex; flex-direction: row; align-items: center;">
                 <h2>{{user.firstName}} {{user.lastName}}</h2>
-                <div *ngIf="user.photo!==''">
-                    <img src="{{user.photo}}" alt="user-img" id="user-img">
-                </div>
-                <div *ngIf="user.photo===''">
-                    <img src="/assets/users/user.png" alt="user-img">
-                </div>
+                <img src="{{user.photo}}" alt="user-img" id="user-img" onerror="this.onerror=null; this.src='/assets/users/user.png'" alt="quiz-img">
             </div>
         </div>
     </div>
