--- a/front-end/src/app/users/user-form/user-form.component.html
+++ b/front-end/src/app/users/user-form/user-form.component.html
@@ -27,25 +27,25 @@
       <label for="alzheimerStade">
         <span class="form-text">Stade Alzheimer :</span> <br>
         Sélectionnez une plage <br>
-        <input class="input-custom" type="radio" name="alzheimerStade" value="stade léger" [formControlName]="'alzheimerStade'" (click)="updateChecked()"> Stade léger (stade 1 à 2) <br>
-        <input class="input-custom" type="radio" name="alzheimerStade" value="stade intermédiaire" [formControlName]="'alzheimerStade'" (click)="updateChecked()"> Stade intermédiaire (stade 3 à 5) <br>
-        <input class="input-custom" type="radio" name="alzheimerStade" value="stade avancé" [formControlName]="'alzheimerStade'" (click)="updateChecked()"> Stade avancé (stade 6 à 7) <br>
+        <input class="input-custom" type="radio" name="alzheimerStade" value="stade léger" [formControlName]="'alzheimerStade'" (click)="setAssistanceValue()"> Stade léger (stade 1 à 2) <br>
+        <input class="input-custom" type="radio" name="alzheimerStade" value="stade intermédiaire" [formControlName]="'alzheimerStade'" (click)="setAssistanceValue()"> Stade intermédiaire (stade 3 à 5) <br>
+        <input class="input-custom" type="radio" name="alzheimerStade" value="stade avancé" [formControlName]="'alzheimerStade'" (click)="setAssistanceValue()"> Stade avancé (stade 6 à 7) <br>
       </label>
 
       <br>
 
       <span class="form-text">Paramètres de jeu :</span><br>
       <label for="indice">
-      <span class="form-text">Indice :</span>
-      <input class="input-custom" type="radio" name="indice" value="oui"> Oui
-      <input class="input-custom" type="radio" name="indice" value="non"> Non
+        <span class="form-text">Indice :</span>
+        <input class="input-custom" type="radio" name="indice" value="oui"> Oui
+        <input class="input-custom" type="radio" name="indice" value="non"> Non
       </label>
       <br>
     
       <label for="vocale">
-      <span class="form-text">Synthèse vocale :</span>
-      <input class="input-custom" type="radio" name="vocale" value="oui"> Oui 
-      <input class="input-custom" type="radio" name="vocale" value="non"> Non
+        <span class="form-text">Synthèse vocale :</span>
+        <input class="input-custom" type="radio" name="vocale" value="oui"> Oui 
+        <input class="input-custom" type="radio" name="vocale" value="non"> Non
       </label>
       <br>
 
@@ -53,8 +53,8 @@
         <span class="form-text">Aide visuelle :</span>
         <input class="input-custom" type="radio" name="visual" value="oui"> Oui 
         <input class="input-custom" type="radio" name="visual" value="non"> Non
-        </label>
-        <br>
+      </label>
+      <br>
     </div>
     
     <div style="display: flex; flex-direction: column; align-items: center; flex-basis: 50%;">
