--- a/front-end/src/app/quizzes/quiz/quiz.component.scss
+++ b/front-end/src/app/quizzes/quiz/quiz.component.scss
@@ -16,3 +16,14 @@ img {
     margin: 130px;
     margin-bottom: 100px;
 }
+
+.edit-img {
+    max-width: 75px; 
+    max-height: 70px;
+}
+
+.trash-img{
+    max-width: 72px; 
+    max-height: 85px; 
+    margin-top: 130px;
+}
