--- a/front-end/src/app/quizzes/play-association/play-association.component.scss
+++ b/front-end/src/app/quizzes/play-association/play-association.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .association-game{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -23,3 +25,13 @@
 svg {
     position: absolute;
   }
+
+.validate-button {
+    background-color: #FFF;
+    border: solid 1px #000;
+    border-radius: 20px;
+    color: #000;
+    color: #000;
+    font-weight: bold;
+    padding: 0.5em 1em;
+}
