--- a/front-end/src/app/quizzes/play-association/play-association.component.scss
+++ b/front-end/src/app/quizzes/play-association/play-association.component.scss
@@ -35,3 +35,15 @@ svg {
     font-weight: bold;
     padding: 0.5em 1em;
 }
+
+#home {
+    max-height: 100px;
+    max-width: 100px;
+    margin-right: 10px;
+}
+
+#next {
+    max-height: 100px;
+    max-width: 100px;
+    margin-left: 10px;
+}
