--- a/front-end/src/app/questions/play-question/play-question.component.scss
+++ b/front-end/src/app/questions/play-question/play-question.component.scss
@@ -16,3 +16,15 @@ h1 {
     box-shadow: 0px 0px 10px green;
     border-radius: 5%;
 }
+
+#home {
+    max-height: 100px;
+    max-width: 100px;
+    margin-right: 10px;
+}
+
+#next {
+    max-height: 100px;
+    max-width: 100px;
+    margin-left: 10px;
+}
