--- a/front-end/src/app/answer/answer.component.scss
+++ b/front-end/src/app/answer/answer.component.scss
@@ -30,6 +30,8 @@
     text-align: center;
     margin-top: 80px;
     margin-bottom: 80px;
+    max-width: 500px;
+    max-height: 500px;
 }
 
 #user-img {
