--- a/front-end/src/app/questions/play-question/play-question.component.scss
+++ b/front-end/src/app/questions/play-question/play-question.component.scss
@@ -3,8 +3,8 @@ h1 {
 }
 
 .answer {
-    max-width: 60%;
-    max-height: 60%;
+    max-width: 400px;
+    max-height: 400px;
     margin: 10px;
     object-fit: cover;
     margin-left: 100px;
