task: implémentation de la suppression des utilisateurs avec backend #100

--- a/front-end/src/app/caregiver/user-management/user-management.component.html
+++ b/front-end/src/app/caregiver/user-management/user-management.component.html
@@ -21,6 +21,7 @@
     <div *ngFor="let user of userList" class="user">
         <div *ngIf="user.photo!==''">
             <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/user-stats-menu/{{user.id}}">
+            <img class="trash" src="/assets/trash.png" alt="trash-img" (click)="delete(user)">
         </div>
         <div *ngIf="user.photo===''">
             <img class="user-img" alt="user-img" src="/assets/users/user.png" routerLink="/user-stats-menu/{{user.id}}">
