test: ajout de test pour jouer un quiz

--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.html
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.html
@@ -15,7 +15,7 @@
 <div class="user-list">
     <div *ngFor="let user of userList" class="user">
         <div *ngIf="user.photo!==''">
-            <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
+            <img class="user-img" alt="user-img-{{user.firstName}}-{{user.lastName}}" src={{user.photo}} routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
         </div>
         <div *ngIf="user.photo===''">
             <img class="user-img" alt="user-img" src="/assets/users/user.png" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
