--- a/front-end/src/app/answer/answer.component.html
+++ b/front-end/src/app/answer/answer.component.html
@@ -27,7 +27,7 @@
     <img *ngIf = "numQuestion <= quiz.questions.length" id="answer-img" alt="answer-{{correctAnswer+1}}" src="{{quiz.questions[numQuestion-1].answers[correctAnswer].img}}">
     <div *ngIf="numQuestion > quiz.questions.length" class="answer-text">
         <div style="display: inline-block; margin: 20px;" *ngFor = "let connection of quiz.associations[numQuestion - quiz.questions.length - 1].connections; let i=index;">
-            <div class="card" style="margin: 10px;" *ngIf="connection.valueToConnect && connection.valueToBeConnected">
+            <div data-testid="solutions" class="card" style="margin: 10px;" *ngIf="connection.valueToConnect && connection.valueToBeConnected">
                 <div style="margin-top: 10px;">
                     {{connection.valueToConnect}}
                     <img src="../../assets/quiz-editor/association-arrow.svg" alt="arrow" style="width: 20px; height: 20px;">
