--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 <p style="display: flex; font-size: 64px; justify-content: center;">Cliquez sur le bouton qui vous correspond</p>
 <div id="button-container">
     <div id="user-side">
-        <button class="btn" name="user" routerLink="/home-profil-choice">Je suis une personne âgée</button>
+        <button class="btn" data-testid="user-page" name="user" routerLink="/home-profil-choice">Je suis une personne âgée</button>
         <p id="countdown" style="color:rgb(202, 202, 69); font-size: 36px; max-width: 567px;">Le site changera vers cette page automatiquement dans 120 secondes...</p>
     </div>
     <div id="caregiver-side">
