--- a/front-end/src/app/quizzes/quiz-editor/quiz-editor.component.html
+++ b/front-end/src/app/quizzes/quiz-editor/quiz-editor.component.html
@@ -9,7 +9,7 @@
     </div> -->
     <!--app-quiz-form (click)="refresh()"></!--app-quiz-form-->
     <div class="button-div" (click)="createQuiz()" style="display: flex; flex-direction: column; align-items: center;">
-        <img src="/assets/folder.png" alt="add-theme">
+        <img id="selectable" src="/assets/folder.png" class="add-quiz">
         <h2>Créer Quiz</h2>
     </div>
     <div>
