--- a/front-end/src/app/questions/play-question/play-question.component.html
+++ b/front-end/src/app/questions/play-question/play-question.component.html
@@ -1,19 +1,19 @@
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin-top: 32px;">
     <div style="display:flex; flex-direction: row; justify-content: space-between; width:100%">
-        <div style="display:flex;flex-direction: row; align-items: center; justify-content: flex-start;" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
+        <div style="display:flex;flex-direction: column; align-items: center; justify-content: flex-start;" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
             <img src="/assets/home.png" alt="home-img" id="home">
             <h2 style="align-self: center;">Accueil</h2>
         </div>
         <h1>{{quiz.questions[numQuestion-1].label}}</h1>
-        <div style="display:flex;flex-direction: row; align-items: center; justify-content: flex-start;" (click)="goToNextQuestion()">
-            <h2 style="align-self: center;">Question Suivante</h2>
+        <div style="display:flex;flex-direction: column; align-items: center; justify-content: flex-start;" (click)="goToNextQuestion()">
             <img src="/assets/next.png" alt="next-img" id="next">
+            <h2 style="align-self: center;">Question Suivante</h2>
         </div>
     </div>
     <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; width:80%;">
         <div *ngFor="let answer of question.answers; let i=index">
             <div style="display:flex; flex-direction:column; align-items: center;">
-                <img class="answer" alt="answer-{{i+1}}" src="{{answer.img}}" (click)="check(i+1)" 
+                <img id="selectable" class="answer" alt="answer-{{i+1}}" src="{{answer.img}}" (click)="check(i+1)" 
                 [ngClass]="{'correct-answer': answer.isCorrect && assistance % 1000 > 100}">
             </div>
         </div>
