--- a/front-end/src/app/quizzes/play-association/play-association.component.html
+++ b/front-end/src/app/quizzes/play-association/play-association.component.html
@@ -5,20 +5,20 @@
         <Button class="validate-button" style= "position:relative; width:170px; height:80px; margin: 10px; font-size: 23px;" (click)="deleteAllConnections()">Réinitialiser</Button>
     </div>
     <div style="display:flex; flex-direction: row; justify-content: space-between; width:100%">
-        <div style="display:flex;flex-direction: row; align-items: center; justify-content: flex-start;" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
+        <div style="display:flex;flex-direction: column; align-items: center; justify-content: flex-start;" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
             <img src="/assets/home.png" alt="home-img" id="home">
             <h2 style="align-self: center;">Accueil</h2>
         </div>
-        <div style="display:flex;flex-direction: row; align-items: center; justify-content: flex-start;" (click)="goToNextQuestion()">
-            <h2 style="align-self: center;">Question Suivante</h2>
+        <div style="display:flex;flex-direction: column; align-items: center;" (click)="goToNextQuestion()">
             <img src="/assets/next.png" alt="next-img" id="next">
+            <h2>Question Suivante</h2>
         </div>
     </div>
-    <div class = "association-game" style="margin-top: 50px;">
+    <div class = "association-game">
         <div class= "connectors-left">
             <div *ngFor = "let value of shuffledValuesToConnect; let i=index" >
-                <div style="display: flex; margin-top:80px; margin-bottom:80px">
-                    <img style="transform: scale(1.7); display: block; max-width:500px; max-height:100px; border-radius: 20px;"alt = "left-image{{i}}" src="{{value[1]}}" *ngIf = "value[1] != null && value[0] != null" (click)="selectLeft(value[0], i)">
+                <div style="display: flex; margin-bottom:80px;  flex-basis: 0;">
+                    <img id="selectable" style="transform: scale(1.7); display: block; max-width:500px; max-height:100px; border-radius: 20px;"alt = "left-image{{i}}" src="{{value[1]}}" *ngIf = "value[1] != null && value[0] != null" (click)="selectLeft(value[0], i)">
                     <Button on attr.id = "left-button{{i}}" style="width: 500px; height:100px; margin-left: 60px; font-size: 25px;" class = "button" *ngIf = "value[0] != null" (click)="selectLeft(value[0], i)">
                         {{value[0]}}
                     </Button>
@@ -27,11 +27,11 @@
         </div>
         <div class = "connectors-right">
             <div *ngFor = "let value of shuffledValuesToBeConnected; let i=index">
-                <div style="display: flex; margin-top:80px; margin-bottom:80px">
+                <div style="display: flex; margin-bottom:80px; flex-basis: 0;">
                     <Button attr.id = "right-button{{i}}" style="width: 500px; height:100px; margin-right: 60px; font-size: 25px;" class = "button" *ngIf = "value[0] != null" (click)="selectRight(value[0], i)">
                         {{value[0]}}
                     </Button>
-                    <img style="transform: scale(1.7); display: block; max-width:500px; max-height:100px; border-radius: 20px;" alt = "right-image{{i}}" src="{{value[1]}}" *ngIf = "value[1] != null && value[0] != null" (click)="selectRight(value[0], i)">
+                    <img id="selectable" style="transform: scale(1.7); display: block; max-width:500px; max-height:100px; border-radius: 20px;" alt = "right-image{{i}}" src="{{value[1]}}" *ngIf = "value[1] != null && value[0] != null" (click)="selectRight(value[0], i)">
                 </div>
             </div>
         </div>
