--- a/front-end/src/app/quizzes/quiz-editor/quiz-editor.component.scss
+++ b/front-end/src/app/quizzes/quiz-editor/quiz-editor.component.scss
@@ -1,3 +1,4 @@
+@import '../../../styles.scss';
 .quiz-list {
   display: flex;
 }
@@ -13,9 +14,12 @@ img {
   max-height: 121px;
 }
 
+.add-quiz {
+  width: 130px;
+}
+
 .theme {
-  margin: 150px;
-  margin-bottom: 100px;
+  margin: 60px;
 }
 
 .top {
