--- a/front-end/src/app/quizzes/theme-list/theme-list.component.scss
+++ b/front-end/src/app/quizzes/theme-list/theme-list.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles.scss";
+
 #user-img {
     max-width: 150px;
     max-height: 150px;
@@ -14,6 +16,5 @@
 }
 
 .theme {
-    margin: 150px;
-    margin-bottom: 100px;
+    margin: 50px;
 }
