--- a/front-end/src/app/caregiver/user-management/user-management.component.scss
+++ b/front-end/src/app/caregiver/user-management/user-management.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables.scss';
+@import '../../../styles.scss';
 
 .user-img {
     max-width: 175px;
@@ -17,10 +18,6 @@
     width: calc(19% - 10px);
     margin: 10px;
 }
-
-#back:hover{
-    cursor:pointer;
-  }
 
 #back {
     margin-top: 10px;
@@ -58,9 +55,4 @@
     border: 3px solid black;
     background-color: rgb(207, 207, 207);
     border-radius: 22px;
-}
-
-.button-div:hover {
-    background-color: grey;
-    color: white;
 }
