--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.scss
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles.scss";
+
 .edit {
     margin-left: 0.3em;
 }
@@ -45,6 +47,11 @@
     margin-top: 10px;
     max-width: 100px;
     max-height: 100px;
+}
+
+#back:hover {
+    cursor: pointer;
+    opacity: 0.5;
 }
 
 .top {
