--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -19,8 +19,9 @@ body {
   padding: 0.5em 1em;
 }
 
-#back:hover{
-  cursor:pointer;
+#back:hover {
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 button:hover{
